--- a/assignment-ii/index.html
+++ b/assignment-ii/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>My Journey</h1>
     <h3>My Picture</h3>
     <picture>
@@ -17,6 +17,6 @@
     <h3>Favourite Moment</h3>
     <video style="width: 300px; height: 300px" controls>
       <source src="Fav_Video.mp4" type="video/mp4" />
-    </video> 
-</body>
+    </video>
+  </body>
 </html>
